--- a/source/Spatch/styles/nav.css
+++ b/source/Spatch/styles/nav.css
@@ -49,7 +49,6 @@ body {
 
 .logo-content .logo #logo-icon {
     width: 150px;
-    margin-right: 5px;
 }
 
 /* ===== Menu btn ===== */
@@ -69,16 +68,17 @@ body {
 }
 
 .sidebar ul {
-    margin-top: 50px;
+    margin: 0;
+    padding: 0;
+    margin-top: 30px;
 }
 
 .sidebar ul li {
     position: relative;
     height: 50px;
-    width: 50px;
-    /* Here was an error? */
-    left: -28px;
-    /* margin: 5px 0px; */
+    width: 100%;
+    margin: 0px;
+    margin-top: 20px;
     list-style: none;
     line-height: 50px;
     transition: all 0.5s ease;
@@ -86,14 +86,13 @@ body {
 
 .sidebar.active ul li {
     position: relative;
-    height: 50px;
+    /* height: 50px;
     width: 100%;
     /* Here was an error? */
     /* left: -20px; */
     /* margin: 5px 0px; */
-    list-style: none;
-    line-height: 50px;
-    transition: all 0.5s ease;
+    /* list-style: none;
+    transition: all 0.5s ease; */
 }
 
 .sidebar ul li a {
@@ -119,15 +118,18 @@ body {
     min-width: 30px;
     border-radius: 12px;
     line-height: 50px;
-    text-align: center;
-    margin: 5px;
-    margin-right: 10px;
+    margin-left: 10px;
+    /* margin-right: 10px; */
+}
+
+.sidebar.active ul li img {
+    margin-right: 15px;
 }
 
 /* ===== Hover / Tooltip ===== */
 .sidebar ul li .tooltip {
     position: absolute;
-    left: 120px;
+    left: 130px;
     top: 50%;
     transform: translate(-50%, -50%);
     border-radius: 6px;
