Created an early build of individual recipie card components. Still a work in progress. DO NOT PULL INTO MAIN, it will override the current index.html

--- a/source/Spatch/styles/template.css
+++ b/source/Spatch/styles/template.css
@@ -2,3 +2,13 @@ body {
     /* some stuff */
     background-color: white;
 }
+
+div {
+    width: 800px;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+#border {
+    height: 100px;
+}
