--- a/source/Spatch/styles/home.css
+++ b/source/Spatch/styles/home.css
@@ -4,15 +4,11 @@
     box-sizing: border-box;
 }
 
-.home-content {
-    position: absolute;
-    height: 100%;
-    width: calc(100% - 78px);
-    left: 78px;
-    transition: all 0.5s ease;
+.main-content {
+    padding: 50px;
 }
 
-.sidebar.active ~ .home-content {
-    width: calc(100% - 240px);
-    left: 240px;
+.recipe-row {
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
