added creat new recipe button

--- a/source/Spatch/styles/home.css
+++ b/source/Spatch/styles/home.css
@@ -8,6 +8,14 @@
     padding: 50px;
 }
 
+.home-top {
+    align-items: center;
+}
+
+.create-new-recipe-top {
+    text-align: right;
+}
+
 .recipe-row {
     margin-top: 50px;
     margin-bottom: 20px;
