--- a/source/Spatch/styles/searchPage.css
+++ b/source/Spatch/styles/searchPage.css
@@ -1,24 +1,3 @@
-.SearchTitle {
-    display: inline-flex;
-    padding: center;
-    padding: 2%;
-    margin-top: 3%;
-    margin-left: 18%;
-    margin-right: 25%;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-h1{
-    margin: auto;
-    white-space: nowrap;
-    padding: center;
-    text-align: center;
-    size: 80%;
-    width: 50%;
-    
-}
-
 .SearchBar {
     display: flex;
     flex-direction: row;
@@ -37,18 +16,19 @@ h1{
     padding: center;
     background-color: rgb(193, 196, 199);
     padding: 5%;
-    gap: 30%;
     margin-top: 2%;
     margin-left: 32%;
     margin-right: 25%;
-    margin-bottom: 7%;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 
 
 .filter-section{
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
+    padding: center;
+    padding: 2%;
     margin-bottom: 5%;
 }
 
@@ -57,7 +37,7 @@ h1{
     
 }
 
-input.filterOption{ 
+.filterOption{ 
     width: 85%;
 }
 
@@ -66,7 +46,9 @@ input.filterSlider{
 }
 
 .squareButton{
-    width: 10%;
+    height: 30px;
+    width: 30px;
+    
     
 }
 
@@ -75,7 +57,7 @@ input.filterSlider{
     flex-direction: row;
     padding: center;
     padding: 2%;
-    gap: 50%;
+    gap: 40%;
 
 }
 
@@ -85,5 +67,9 @@ input.filterSlider{
 
 #showpop.show{
     display: block;
+}
+
+#submitFilter{
+    width: 40%;
 }
 
