--- a/source/Spatch/styles/home.css
+++ b/source/Spatch/styles/home.css
@@ -10,6 +10,9 @@
 
 .home-top {
     align-items: center;
+    padding: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
 }
 
 .create-new-recipe-top {
