styled home cards

--- a/source/Spatch/styles/home.css
+++ b/source/Spatch/styles/home.css
@@ -24,13 +24,11 @@
     margin-bottom: 20px;
 }
 
-.recipe-list {
-    margin-top: 30px;
-}
-
 .recipe-display {
     width: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
