--- a/source/Spatch/styles/addRecipe.css
+++ b/source/Spatch/styles/addRecipe.css
@@ -1,10 +1,18 @@
+.create-recipe-input-fields {
+    width: 100%;
+    padding: 10px;
+}
+
 .subTitle{
     font-weight: bold;
+    font-size: large;
     position: relative;
     display: block;
     height: 1.5em;
     top: 0;
     left: 0;
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
 .entryDiv{
@@ -25,6 +33,10 @@
     width: 50%;
 }
 
+#servingSizeChoice {
+    width: 60px;
+}
+
 #servingSize{
     position: relative;
     display: inline;
@@ -35,4 +47,8 @@
     position: absolute;
     width: 70%;
     padding: 50px;
+}
+
+#create-recipe-button {
+    float: right;
 }
