--- a/source/Spatch/styles/recipeDisplay.css
+++ b/source/Spatch/styles/recipeDisplay.css
@@ -5,14 +5,15 @@
 }
 
 .main-content {
+    margin-left: auto;
+    margin-right: auto;
     padding: 50px;
+    max-width: 1080px;
 }
 
-.home-top {
-    align-items: center;
-    padding: 20px;
-    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2);
-    border-radius: 12px;
+.goBack{
+    width: 30px;
+    height: auto;
 }
 
 .row{
@@ -21,7 +22,6 @@
 
 .recipeName{
     padding: 2%;
-    font-size:4vw;
     font-weight: bold;
     display: inline;
 }
@@ -35,22 +35,27 @@
     padding-top: 5%;
     
 }
-.ingredients h4{
-    font-size: 2.5vw;
+.ingredients h2{
     font-weight: bold;
+}
+.ingredients li{
+    font-size: 24px;
+}
+
+#infoCard{
+    background-color: #EEEEEE;
+    border-radius: 12px;
 }
 
 .instructions{
     padding-top: 5%;
 }
 
-.instructions h4{
-    font-size: 2.5vw;
+.instructions h2{
     font-weight: bold;
 }
-
-.ingredients li{
-    font-size: 2.3vw;
+.instructions li{
+    font-size: 24px;
 }
 
 .recipeImage img {
@@ -64,13 +69,10 @@
     float: right;
     margin-right: 15%;
 }
-.goBack{
-    width: 3%;
-    height: auto;
-}
+
 .dl-horizontal{
     padding: 15%;
-    font-size: 2vw;
+    font-size: 18px;
 }
 .dl-horizontal img{
     margin-top: 5%;
