--- a/source/Spatch/styles/searchPage.css
+++ b/source/Spatch/styles/searchPage.css
@@ -27,7 +27,13 @@
     border-radius: 8%;
     background-color: #DEE8F2;
     margin-left: 40%;
-    margin-right: 40% ;
+    margin-right: 40%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    position: absolute;
+    left: 28%;
+    width: 20%;
+    
 }
 
 .popUp > p{
@@ -43,11 +49,13 @@
     justify-content: center;
     padding: 2%;
     margin-bottom: -1%;
+    margin-left: 10%;
+    margin-right: 10%;
 
 }
 
 .filter-section > input{ 
-    width: 20%;
+    width: 80%;
     height: 10%;
 }
 
@@ -68,19 +76,25 @@
     display: flex;
     flex-direction: row;
     gap: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
+    align-items: center;
+    justify-content: center;
 
 }
 
 #submitFilter {
-    width: 12%;
+    width: 52%;
     height: 5%;
-    font-size: 12px;
+    font-size: 60%;
 }
 
 .filterCheckbox, .filterCheckbox > p{
     display: inline-flex;
     gap: 5%;
     font-size: 12px;
+    margin-left: 10%;
+    margin-right: 40%;
     
 }
 
