--- a/source/Spatch/styles/searchPage.css
+++ b/source/Spatch/styles/searchPage.css
@@ -31,10 +31,11 @@
     padding-top: 2%;
     padding-bottom: 2%;
     position: absolute;
-    left: 28%;
+    left: 27%;
     width: 20%;
-    
 }
+
+
 
 .popUp > p{
     font-size: 15px;
@@ -92,17 +93,17 @@
 .filterCheckbox, .filterCheckbox > p{
     display: inline-flex;
     gap: 5%;
-    font-size: 12px;
+    font-size: 12%;
     margin-left: 10%;
     margin-right: 40%;
     
 }
 
-#showpop{
+#showpop, #showTriangle{
     display: none;
 }
 
-#showpop.show{
+#showpop.show, #showTriangle.show{
     display: block;
 }
 
