--- a/source/Spatch/styles/searchPage.css
+++ b/source/Spatch/styles/searchPage.css
@@ -29,7 +29,7 @@
 
 #filterImage{
     height: 40px;
-    width: 40px; 
+    width: 40px;
 }
 
 
@@ -76,10 +76,18 @@
 
 
 .filter-section > button{
-    height: 21px;
-    width: 20px;  
-    text-align: center;
+    height: 20px;
+    width: 20px; 
+    border-radius: 20%; 
 }
+
+.plusImage{
+    height: 18px;
+    width: 18px; 
+
+}
+
+
 
 .filter-slider{
     display: flex;
