--- a/source/Spatch/styles/addRecipe.css
+++ b/source/Spatch/styles/addRecipe.css
@@ -98,3 +98,14 @@
     height: 100%;
     margin-right: 1em;
 }
+
+#instruction-cards {
+    display: inline-block;
+    position: relative;
+    width: 70%;
+    padding: 0.5em;
+    border-radius: 5px;
+    border-width: 0.3em;
+    border-style: solid;
+    border-color: #0d6efd;
+}
