finished tts and timer integration

--- a/source/Spatch/styles/recipeDisplay.css
+++ b/source/Spatch/styles/recipeDisplay.css
@@ -59,7 +59,15 @@
     font-weight: bold;
 }
 .instructions li{
-    font-size: 24px;
+    font-size: 28px;
+}
+.instruction-item {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.tts-timer-div {
+    margin-top: 10px;
+    font-size: 18px;
 }
 
 .recipeImage img {
