--- a/source/Spatch/styles/index.css
+++ b/source/Spatch/styles/index.css
@@ -19,7 +19,7 @@ html, body {
     height: 100%;
     margin: 0px;
     padding: 0px;
-    /* overflow-x: hidden;  */
+    overflow-x: hidden;  
 }
 
 .nav1 {
@@ -32,7 +32,7 @@ html, body {
 }
 
 section {
-    height: 100vh;
+    min-height: 100vh;
     top:0;
     transition: 0.5s;
     display: flex;
@@ -107,7 +107,7 @@ header ul li {
     max-width: 800px;
     color:white;
     line-height: 25px;  
-    margin-right:200px
+    margin-right:50px
 }
 
 h3 {
@@ -175,11 +175,12 @@ span {
     margin-top: -150px;
     margin-bottom: 60px;
     text-align:center;
-    padding-right: 50px;
     font-size: 60px;
-    position: relative;
+    position: absolute;
+    min-width: 600px;
     background-color:#FFFF8F;
     border-radius: 50%;
+    margin-left: 530px;
 
 }
 
@@ -196,14 +197,15 @@ h2 {
 
 .fewFeatures {
     display: flex;
-    flex-shrink: 0; 
+    position: absolute;
     text-align: center;
-    padding-left: 50px;
-    width: auto;
-    padding-left: 130px;
-    position: relative;
+    padding-left: 235px;
     line-height: 25px;
-    flex-shrink: 0;
+    max-height: 600px;
+}
+
+.featureText {
+    max-height: 600px;
 }
 
 .overview {
@@ -213,22 +215,25 @@ h2 {
 
 .actionTitle {
     text-align: center;
+    padding-top: 40px;
+    min-width: 1500px;
+    padding-left: 150px;
     position: absolute;
     color: white;
-    width: 1370px;
     margin-bottom: 0;
-    font-size: 600%;
-    margin: 4%;
+    margin-left: 20px;
+    margin-top: 50px;
+    font-size: 100px;
     font-family: 'Lobster';
-
 }
 
 .actionTitle2 {
     color: white;
     width: 1300px;
+    padding-left: 190px;
     height: 300px;
-    font-size: 400%;
-    margin: 16% 5%;
+    font-size: 70px;
+    margin: 300px 80px;
     text-align: center;
     position: absolute;
     font-family: 'Dancing Script';
@@ -244,8 +249,10 @@ h2 {
     color: black;
     background: white;
     font-size: 3em;
-    max-height: 12%;
-    margin-top: 31%;
-    margin-left: 40%;
+    position: absolute;
+    max-height: 80px;
+    min-width: 250px;
+    margin-top: 500px;
+    margin-left: 700px;
     z-index: 1;
 }
