--- a/source/Spatch/styles/searchPage.css
+++ b/source/Spatch/styles/searchPage.css
@@ -1,4 +1,3 @@
-
 .SearchBar {
     display: flex;
     flex-direction: row;
@@ -13,11 +12,13 @@
 
 #searchInput{
     width: 80%;
+    min-width: 50%;
     height: 60px;
     font-size: 20px;
     left: 5%;
     color: rgb(56, 55, 55);
     padding-left: 3%;
+    min-width: 100px;
 }
 
 
@@ -25,10 +26,18 @@
     height: 60px;
     width: 60px; 
     border-radius: 8%;
-    border-color:#DADADA ;
-    background-color: #DADADA;
+    border-color:#EEEEEE ;
+    background-color: #EEEEEE;
     box-shadow: none;
 
+}
+
+#showpop{
+    display: none;
+}
+
+#showpop.show{
+    display: block;
 }
 
 
@@ -42,8 +51,8 @@
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
-    border-radius: 8%;
-    background-color: #DEE8F2;
+    border-radius: 5%;
+    background-color: #EEEEEE;
     margin-left: 40%;
     margin-right: 40%;
     padding-top: 2%;
@@ -51,7 +60,8 @@
     position: absolute;
     left: 22%;
     width: 20%;
-    min-width: 40px;
+    min-width: 200px;
+    z-index: 500;
 }
 
 
@@ -77,6 +87,8 @@
 .filter-section > input{ 
     width: 95%;
     height: 10%;
+    padding-left: 4%;
+    padding-right: 2%;
     padding: 3%;
     font-size: 15px;
     
@@ -97,8 +109,8 @@
 .filter-slider > input{
     width: 25%;
     height: 5%;
-    margin-left: 5%;
-    padding-left: 2%;
+    margin-left: 2%;
+    padding: 1%;
 }
 
 .filter-slider > label{
@@ -135,26 +147,21 @@
 
 }
 
-.submit-filter-section > button{
-    width: 100px;
-    height: 25px;
-    padding-bottom: 1%;
-    border-radius: 5%; 
-    border-color: #DADADA;
-    background-color: #DADADA;
-    text-align: center;
+#applyFilters{
     font-size: 13px;
     min-width: 80px;
-    margin: auto;
 
 
 }
 
-#showpop{
-    display: none;
-}
 
-#showpop.show{
-    display: block;
-}
+.recipe-results{
+    display: flexbox;
+    align-content:center;
+    padding: center;
+    padding: 2%;
+    padding-bottom: 10%;
+    margin-bottom: 10%;
+    margin-left: 10%;
 
+}
